--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
             "email": "i.b@msulab.ru"
         }
     ],
+    "scripts": {
+        "test": "phpunit tests"
+      },
     "autoload": {
         "files": [
             "src/runner.php",
@@ -16,5 +19,8 @@
     "require": {
         "docopt/docopt": "^1.0",
         "funct/funct": "^1.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.3"
     }
 }
