--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,10 @@ jobs:
       - name: Install
         # Install project
         run: make install
-      - name: Run linter
+      - name: Run linter (fix)
         # Run Linter
         run: make lint-fix
+      - name: Run linter
         run: make lint
         # Publish code coverage on Code Climate
         # https://github.com/paambaati/codeclimate-action
