--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "funct/funct": "^1.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
